--- a/style/popup-modal.css
+++ b/style/popup-modal.css
@@ -20,29 +20,21 @@
     width: 80%; /* Could be more or less, depending on screen size */
   }
   
-  /* The Close Button (x) */
-  .close {
-    position: absolute;
-    right: 25px;
-    top: 0;
+.close {
     color: #000;
     font-size: 35px;
     font-weight: bold;
-  }
+    position: relative;
+    float: right;
+    color: rgb(250, 8, 8);
+    top: -10px;
+    right: -10px;
+}
   
-  .close:hover,
-  .close:focus {
+.close:hover,
+.close:focus {
     color: red;
     cursor: pointer;
-  }
-
-input[type=text]{
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
 }
 
 button {
@@ -53,7 +45,7 @@ button {
     border: none;
     cursor: pointer;
     width: 100%;
-  }
+}
 
 button:hover {
     opacity: 0.8;
@@ -75,12 +67,12 @@ button:hover {
 
 .container {
     padding: 16px;
-  }
+}
   
 img.avatar {
     width: 40%;
     border-radius: 50%;
-  }
+}
 
 /* Add Zoom Animation */
 .animate {
