--- a/style/expenses-form.css
+++ b/style/expenses-form.css
@@ -2,10 +2,7 @@
   margin-top:2%;
  }
 
-.form-title { 
-  margin-bottom:20%;
-  margin-left:2%;
-  margin-right:2%;
+.form-title {
   margin: auto;
   width: 50%;
   text-align: center;
@@ -21,6 +18,23 @@ form {
 }
 
 .form-div {
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+  width: 80%;
+  position: absolute;
+  display: grid;
+  place-items: center;
+  z-index: 1;
+  display: none;
+}
+
+.base-div {
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+  width: 80%;
+  position: absolute;
   display: grid;
   place-items: center;
 }
