--- a/style/expenses-form.css
+++ b/style/expenses-form.css
@@ -9,7 +9,7 @@
 }
 
 form {
-  width: 75%;
+  width: 55%;
   background: whitesmoke;
   padding-top: 2%;
   padding-bottom: 5%;
@@ -21,7 +21,7 @@ form {
   margin: 0 auto;
   left: 0;
   right: 0;
-  width: 80%;
+  width: 70%;
   position: absolute;
   display: grid;
   place-items: center;
@@ -33,7 +33,7 @@ form {
   margin: 0 auto;
   left: 0;
   right: 0;
-  width: 80%;
+  width: 70%;
   position: absolute;
   display: grid;
   place-items: center;
@@ -43,10 +43,16 @@ form {
   margin: 0 auto;
   left: 0;
   right: 0;
-  width: 80%;
+  width: 70%;
   position: absolute;
   display: grid;
   place-items: center;
   z-index: 1;
   display: none;
+}
+
+.no-edit {
+  border-width:0px;
+  border:none;
+  background: transparent;
 }
