--- a/style/expenses-form.css
+++ b/style/expenses-form.css
@@ -1,6 +1,10 @@
 .top2 { 
   margin-top:2%;
- }
+}
+
+.top5 { 
+  margin-top:5%;
+}
 
 .form-title {
   margin: auto;
@@ -34,7 +38,17 @@ form {
   left: 0;
   right: 0;
   width: 70%;
-  position: absolute;
+  /* position: absolute; */
+  display: grid;
+  place-items: center;
+}
+
+.base-table-div {
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+  width: 70%;
+  /* position: absolute; */
   display: grid;
   place-items: center;
 }
@@ -49,6 +63,12 @@ form {
   place-items: center;
   z-index: 1;
   display: none;
+
+  /* to add scrolling to expenses popup list*/
+  overflow-x:hidden;
+  overflow-y:auto;
+  min-height:200px;
+  max-height:500px;
 }
 
 .no-edit {
